* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-05.
+2004-05-06.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -73,7 +73,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.net.URLStreamHandler</td> <td class="needsmerge"><a href="compare/java.net.URLStreamHandler.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.DirectByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.MappedByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
@@ -84,7 +83,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.logging.Level</td> <td class="needsmerge"><a href="compare/java.util.logging.Level.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.prefs.AbstractPreferences</td> <td class="needsmerge"><a href="compare/java.util.prefs.AbstractPreferences.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -107,7 +105,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">javax.imageio.stream.ImageInputStream</td> <td class="needsmerge"><a href="compare/javax.imageio.stream.ImageInputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.naming.CompoundName</td> <td class="needsmerge"><a href="compare/javax.naming.CompoundName.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.AttributeException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.CancelablePrintJob</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.Doc</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -173,15 +170,22 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.print.attribute.standard.PagesPerMinuteColor</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.PagesPerMinuteColor.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PresentationDirection</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrintQuality</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.PrinterInfo</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.PrinterInfo.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterIsAcceptingJobs</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.PrinterLocation</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.PrinterLocation.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.PrinterMakeAndModel</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.PrinterMakeAndModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.PrinterMessageFromOperator</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.PrinterMessageFromOperator.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterMoreInfo</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterMoreInfoManufacturer</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.PrinterName</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.PrinterName.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterResolution</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterState</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterStateReason</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterStateReasons</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.PrinterURI</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.QueuedJobCount</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.QueuedJobCount.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.ReferenceUriSchemesSupported</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.print.attribute.standard.RequestingUserName</td> <td class="needsmerge"><a href="compare/javax.print.attribute.standard.RequestingUserName.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.Severity</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.SheetCollate</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.attribute.standard.Sides</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -197,63 +201,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td>No</td> </tr>
-<tr> <td class="needsmerge">javax.swing.AbstractButton</td> <td class="needsmerge"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.ActionMap</td> <td class="needsmerge"><a href="compare/javax.swing.ActionMap.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.DefaultBoundedRangeModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultBoundedRangeModel.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.DefaultButtonModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultButtonModel.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.DefaultListModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultListModel.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.ImageIcon</td> <td class="needsmerge"><a href="compare/javax.swing.ImageIcon.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JComboBox</td> <td class="needsmerge"><a href="compare/javax.swing.JComboBox.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JInternalFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JInternalFrame.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JList</td> <td class="needsmerge"><a href="compare/javax.swing.JList.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JMenuBar</td> <td class="needsmerge"><a href="compare/javax.swing.JMenuBar.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JMenuItem</td> <td class="needsmerge"><a href="compare/javax.swing.JMenuItem.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JOptionPane</td> <td class="needsmerge"><a href="compare/javax.swing.JOptionPane.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JProgressBar</td> <td class="needsmerge"><a href="compare/javax.swing.JProgressBar.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JRootPane</td> <td class="needsmerge"><a href="compare/javax.swing.JRootPane.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JScrollBar</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollBar.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JScrollPane</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollPane.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JSeparator</td> <td class="needsmerge"><a href="compare/javax.swing.JSeparator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JSlider</td> <td class="needsmerge"><a href="compare/javax.swing.JSlider.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JTabbedPane</td> <td class="needsmerge"><a href="compare/javax.swing.JTabbedPane.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JTable</td> <td class="needsmerge"><a href="compare/javax.swing.JTable.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JTextField.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JToolBar</td> <td class="needsmerge"><a href="compare/javax.swing.JToolBar.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JToolTip</td> <td class="needsmerge"><a href="compare/javax.swing.JToolTip.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JTree</td> <td class="needsmerge"><a href="compare/javax.swing.JTree.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JWindow</td> <td class="needsmerge"><a href="compare/javax.swing.JWindow.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.KeyStroke</td> <td class="needsmerge"><a href="compare/javax.swing.KeyStroke.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.ListModel</td> <td class="needsmerge"><a href="compare/javax.swing.ListModel.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.LookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.LookAndFeel.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.Popup</td> <td class="needsmerge"><a href="compare/javax.swing.Popup.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.SwingUtilities</td> <td class="needsmerge"><a href="compare/javax.swing.SwingUtilities.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.Timer</td> <td class="needsmerge"><a href="compare/javax.swing.Timer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.ToolTipManager</td> <td class="needsmerge"><a href="compare/javax.swing.ToolTipManager.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.UIDefaults</td> <td class="needsmerge"><a href="compare/javax.swing.UIDefaults.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.border.TitledBorder</td> <td class="needsmerge"><a href="compare/javax.swing.border.TitledBorder.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.filechooser.FileSystemView</td> <td class="needsmerge"><a href="compare/javax.swing.filechooser.FileSystemView.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonListener</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonListener.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicCheckBoxMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicCheckBoxMenuItemUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicGraphicsUtils</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicGraphicsUtils.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLabelUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLabelUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicMenuItemUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicRadioButtonMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicRadioButtonMenuItemUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicRootPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicRootPaneUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollPaneUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSliderUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSliderUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTabbedPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTabbedPaneUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToggleButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToggleButtonUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.table.JTableHeader</td> <td class="needsmerge"><a href="compare/javax.swing.table.JTableHeader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.TableColumn</td> <td class="needsmerge"><a href="compare/javax.swing.table.TableColumn.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.text.AbstractDocument</td> <td class="needsmerge"><a href="compare/javax.swing.text.AbstractDocument.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.text.DefaultCaret</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultCaret.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.text.StyledEditorKit</td> <td class="needsmerge"><a href="compare/javax.swing.text.StyledEditorKit.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.tree.DefaultTreeCellEditor</td> <td class="needsmerge"><a href="compare/javax.swing.tree.DefaultTreeCellEditor.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
