Bootstrap and test results for 3.4.0:
  x86_64-unknown-netbsd1.6ZL

Bootstrap for 3.4.0:

  alphaev68-dec-osf5.1

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -51,6 +51,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev68-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C,C++,F77,Obj-C,Ada)
+<a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00136.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>binutils 2.13.1</td>
 <td>Bootstrap (C, C++, F77, Obj-C):
@@ -301,6 +309,16 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01028.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01029.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-netbsd1.6ZL</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C,C++,F77,Java,Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00204.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-05/msg00257.html">3.4.0</a>
 </td>
 </tr>
 
