--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -1098,6 +1098,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.10</td>
+<td>Sun as and ld</td>
+<td>Bootstrap (C,C++,Java):
+<a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00049.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
