* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-06.
+2004-05-07.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -81,8 +81,9 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.DecimalFormat</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.logging.Level</td> <td class="needsmerge"><a href="compare/java.util.logging.Level.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.SimpleTimeZone</td> <td class="needsmerge"><a href="compare/java.util.SimpleTimeZone.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -104,7 +105,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">javax.imageio.stream.ImageInputStream</td> <td class="needsmerge"><a href="compare/javax.imageio.stream.ImageInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.AttributeException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.CancelablePrintJob</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.Doc</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -201,7 +201,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td>No</td> </tr>
-<tr> <td class="needsmerge">javax.swing.table.TableColumn</td> <td class="needsmerge"><a href="compare/javax.swing.table.TableColumn.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -232,15 +231,8 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.xml.transform.sax.TransformerHandler</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamResult</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamSource</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer.c</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxMenuItemPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkCheckboxMenuItemPeer.c.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkCheckboxPeer.c.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
-<tr> <td class="classpath-only">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkGenericPeer.c</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkPopupMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkPopupMenuPeer.c.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkWindowPeer.c.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">jni/gtk-peer/gthread-jni.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gthread-jni.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
