* gcc-3.5/changes.html: Document new log1p x87 intrinsic.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -58,8 +58,8 @@
   <ul>
     <li>The <code>acos</code>, <code>asin</code>, <code>drem</code>,
         <code>exp10</code>, <code>exp2</code>, <code>expm1</code>,
-        <code>fmod</code>, <code>ilogb</code>,
-        <code>log10</code>, <code>log2</code>, <code>logb</code> and
+        <code>fmod</code>, <code>ilogb</code>, <code>log10</code>,
+        <code>log1p</code>, <code>log2</code>, <code>logb</code> and
         <code>tan</code> mathematical builtins (and their float and long
         double variants) are now implemented as inline x87 intrinsics
         when using <code>-ffast-math</code>.</li>
