--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -315,7 +315,7 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>x86_64-unknown-netbsd1.6ZL</td>
 <td>&nbsp;</td>
-<td>Bootstrap (C,C++,F77,Java,Obj-C):
+<td>Bootstrap (C,C++,F77,Java,Obj-C,Ada):
 <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00204.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-05/msg00257.html">3.4.0</a>
