* cvs.html: Move e500-branch to inactive development.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -229,11 +229,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   will be added to mainline CVS (for 3.4).  The branch is regularly
   merged with the GCC 3.3 branch.</dd>
 
-  <dt>gcc-3_3-e500-branch</dt>
-  <dd>This branch is for backporting the PowerPC/E500 back end to GCC 3.3.
-  See <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00733.html">this
-  message</a> for details.</dd>
-
   <dt>apple-ppc-branch</dt>
   <dd>This branch is for various improvements in use at Apple and to
   coordinate work with others.  This branch is maintained by the folks
@@ -327,6 +322,11 @@ particular releases or snapshots or the latest snapshot.  </p>
   See <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
   thread</a> for discussion of possible work still to be done in this
   area.  The branch is unmaintained at present.</dd>
+
+  <dt>gcc-3_3-e500-branch</dt>
+  <dd>This branch was for backporting the PowerPC/E500 back end to GCC 3.3.
+  See <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00733.html">this
+  message</a> for details.</dd>
 
   <dt>gomp-01-branch</dt>
   <dd>This branch was created to allow the
