--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -260,13 +260,13 @@ names.
 
   <ul>
 
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/">WG14 (C
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/">WG14 (C
     standards committee)</a></li>
 
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n897.pdf">Draft
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/n897.pdf">Draft
     C99 Rationale</a></li>
 
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/summary.htm">C99
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/summary.htm">C99
     Defect Reports</a></li>
 
     <li><a href="ftp://ftp.uu.net/doc/standards/ansi/X3.159-1989/">C89
@@ -275,27 +275,27 @@ names.
     <li><a href="http://www.lysator.liu.se/c/rat/title.html">C89
     Rationale (HTML)</a></li>
 
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/tc1.htm">C89
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/tc1.htm">C89
     Technical Corrigendum 1</a></li>
 
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/tc2.htm">C89
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/tc2.htm">C89
     Technical Corrigendum 2</a></li>
 
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/dr.htm">C89
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/dr.htm">C89
     Defect Reports</a></li>
 
   </ul></li>
 
   <li>Sequence point rules in C:
   <ul>
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n925.htm">
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/n925.htm">
     A formal model of sequence points and related issues by
     Clive Feather</a></li>
     <li><a href="http://www.cl.cam.ac.uk/TechReports/UCAM-CL-TR-453.pdf">
     C formalised in HOL, thesis by Michael Norrish</a></li>
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n926.htm">
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/n926.htm">
     Sequence points analysis by Raymond Mak</a></li>
-    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n927.htm">
+    <li><a href="http://www.open-std.org/jtc1/sc22/wg14/www/docs/n927.htm">
     Another formalism for sequence points by D. Hugh Redelmeier</a></li>
   </ul></li>
   <li>C historical information:
