Announce branch closure.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -26,6 +26,11 @@
 <h2><a name="news">Latest News</a></h2>
 
 <dl>
+<dt>2004-05-13</dt>
+<dd><p>The branch is now closed.  Tree SSA has been <a
+href="http://gcc.gnu.org/ml/gcc/2004-05/msg00679.html">merged</a> into
+mainline.</p></dd>
+
 <dt>2004-05-03</dt>
 <dd><p>Merge status: <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00075.html">http://gcc.gnu.org/ml/gcc/2004-05/msg00075.html</a>.</p></dd>
 
