Link to gfortran and current Ada manuals.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -244,6 +244,12 @@ existing release.</p>
            PostScript</a> or <a
            href="http://gcc.gnu.org/onlinedocs/gcc-html.tar.gz">an
            HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gfortran/">GNU Fortran
+           95 Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gfortran.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gfortran-html.tar.gz">an
+           HTML tarball</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/g77/">G77 Manual</a> (<a
            href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
            PostScript</a> or <a
@@ -269,11 +275,11 @@ existing release.</p>
            PostScript</a> or <a
            href="http://gcc.gnu.org/onlinedocs/gnat_rm-html.tar.gz">an
            HTML tarball</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx/">GNAT User's Guide
-           for Unix Platforms</a> (<a
-           href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx.ps.gz">also in
+    <li><a href="http://gcc.gnu.org/onlinedocs/gnat_ugn_unw/">GNAT User's Guide
+           for Native Platforms / Unix and Windows</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gnat_ugn_unw.ps.gz">also in
            PostScript</a> or <a
-           href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx-html.tar.gz">an
+           href="http://gcc.gnu.org/onlinedocs/gnat_ugn_unw-html.tar.gz">an
            HTML tarball</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/fastjar/">GNU jar utilities manual</a> (<a
            href="http://gcc.gnu.org/onlinedocs/fastjar.ps.gz">also in
