Announce the tree-ssa merge into mainline.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -87,6 +87,14 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>May 13, 2004</b></dt>
+<dd>
+The <a href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa
+branch</a> has been <a
+href="http://gcc.gnu.org/ml/gcc/2004-05/msg00679.html">merged into
+mainline</a>.
+</dd>
+
 <dt><b>April 20, 2004</b></dt>
 <dd>
 <a href="gcc-3.4/">GCC 3.4.0</a> has been released.
