Update links to WG21 site.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -318,7 +318,7 @@ names.
 <h3>C++ information</h3>
 
 <ul>
-  <li><a href="http://std.dkuug.dk/jtc1/sc22/wg21/">ISO Committee homepage
+  <li><a href="http://www.open-std.org/jtc1/sc22/wg21/">ISO Committee homepage
       (defects list, etc)</a></li>
   <li><a href="http://www.comeaucomputing.com/iso/">Comeau reflector</a></li>
 </ul>
