--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-16.
+2004-05-17.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,6 +19,11 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="classpath-only">gnu.java.io.EncodingManager</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.io.PlatformHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">gnu.java.lang.CharData</td> <td class="needsmerge"><a href="compare/gnu.java.lang.CharData.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">gnu.java.lang.MainThread</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.lang.SystemClassLoader</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.math.MPN</td> <td class="needsmerge"><a href="compare/gnu.java.math.MPN.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainDatagramSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
