[maintainer-scripts/] 2004-05-17  Kelley Cook  <kcook@gcc.gnu.org>
	* gcc_release (build_sources): Change CRCs from brik to md5sum.
[htdocs/]
2004-05-17  Kelley Cook  <kcook@gcc.gnu.org>

	* snapshots.html: Update docs for checking with md5sum.

--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -31,9 +31,17 @@ diff files to update from one snapshot to the next.</p>
 <p><code>contrib/gcc_update</code> can be used to apply diffs between
 successive snapshot versions and preserve relations between generated
 files so that autoconf et al aren't needed. This is documented in
-comments in contrib/gcc_update. <br /> The file .brik provides a list of
-checksums of files in the snapshot, that may be checked using<br />
-brik -C &lt; .brik</p>
+comments in contrib/gcc_update.</p>
+
+<p>The program <code>md5sum</code>&mdash;which is included with the 
+<a href="http://www.gnu.org/software/textutils/textutils.html";>GNU
+Text Utilities</a>&mdash;can be used to verify the integrity of a
+snapshot or release.&nbsp; The release script generates the file 
+<code>MD5SUMS</code> that provides a 128-bit checksum for every
+file in the tarball.&nbsp; Use the following command to verify the
+sources:<br />
+ 
+<code>md5sum --check MD5SUMS | grep -v OK$</code></p>
 
 <!--
 <p>In addition, some of our contributors also provide pre-built binaries
