--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -9,7 +9,7 @@
 
 <p>Currently the main GCC distribution contains front ends for C
 (gcc), C++ (g++), Objective C,
-Fortran (g77), Java (<a
+Fortran, Java (<a
 href="java/">GCJ</a>), and Ada (GNAT).</p>
 
 <p>There are several more front ends for different languages that have
