* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-17.
+2004-05-18.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -51,6 +51,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.io.PrintStream</td> <td class="needsmerge"><a href="compare/java.io.PrintStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.RandomAccessFile</td> <td class="needsmerge"><a href="compare/java.io.RandomAccessFile.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.io.VMObjectStreamClass</td> <td class="VM-specific">VM-specific</td> </tr>
+<tr> <td class="needsmerge">java.io.Writer</td> <td class="needsmerge"><a href="compare/java.io.Writer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Character</td> <td class="needsmerge"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Class</td> <td class="needsmerge"><a href="compare/java.lang.Class.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Double</td> <td class="needsmerge"><a href="compare/java.lang.Double.diff">Diff</a></td> </tr>
