* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-18.
+2004-05-20.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -39,10 +39,18 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.rmi.rmic.CompilerProcess</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.rmic.CompilerProcess.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.CORBA.GetDelegateInstanceException</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.CORBA.PortableRemoteObjectDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.CORBA.StubDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.CORBA.UtilDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.applet.Applet</td> <td class="needsmerge"><a href="compare/java.applet.Applet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Toolkit</td> <td class="needsmerge"><a href="compare/java.awt.Toolkit.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.Arc2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Arc2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
@@ -114,10 +122,19 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.BAD_OPERATION</td> <td>No</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.ORB</td> <td>No</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.BAD_OPERATION</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.ClassDesc</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.PortableRemoteObjectDelegate</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.Stub</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.StubDelegate</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.Tie</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.Util</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.UtilDelegate</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.ValueHandler</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.ORB</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.PortableRemoteObject</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
